Adjust right-sidebar width to fix the spacing problem

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -132,9 +132,9 @@ $x-large                    : 1280px !default;
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow : 200px !default;
-$right-sidebar-width        : 300px !default;
-$right-sidebar-width-wide   : 400px !default;
+$right-sidebar-width-narrow : 20px !default;
+$right-sidebar-width        : 30px !default;
+$right-sidebar-width-wide   : 40px !default;
 
 $susy: (
   columns: 12,
